--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,6 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v4
 
-      - run: uv run ./nocomps.py
+      - run: uv run ./nocomps.py -o "README.md"
 
       - uses: stefanzweifel/git-auto-commit-action@v5
